Changelog
=========

2.1-rc1 (2011-07-14)
~~~~~~~~~~~~~~~~~~~~

- Major architectural change.

  The package no longer contains own template classes; instead,
  patches are made to switch from the reference TAL interpreter to the
  Chameleon TAL compiler.
  [malthe]

2.0-rc3 (2011-07-07)
~~~~~~~~~~~~~~~~~~~~

- Refactor custom Python expression implementation to use the
  ``parse`` method. This builds directly on the base implementation
  and its behavior.
  [malthe]

2.0-rc2 (2011-05-24)
~~~~~~~~~~~~~~~~~~~~

- Have the base template class implement ``IPageTemplate`` from
  ``zope.pagetemplate``. This interface is relied on for a number of
  adapter registrations and the missing interface declaration affects
  packages such as ``plone.caching``.
  [malthe]

- Set default reload mode to the Zope 2 application server
  configuration's ``debug_mode`` value.
  [malthe]

2.0-rc1 (2011-02-28)
~~~~~~~~~~~~~~~~~~~~

- Update to Chameleon 2.0.

  This release includes many changes and is a complete rewrite of the
  1.x series.

  Note that Python 2.5+ is now required.
  [malthe]

- Python-expressions are now subject to access-control security.
  [malthe]

1.3.3 - 2010-09-30
~~~~~~~~~~~~~~~~~~

- Apply patches at import time instead of product initialisation.
  [wichert]

1.3.2 - 2010-09-29
~~~~~~~~~~~~~~~~~~

- Add a same_type method to the default namespace.
  [wichert]

1.3.1 - 2010-09-23
~~~~~~~~~~~~~~~~~~

- Added support for eager loading (environment variable
  ``CHAMELEON_EAGER``). This flag should be passed only in development
  mode and will reveal any templates which do not parse.
  [malthe]

1.3 - 2010-09-08
~~~~~~~~~~~~~~~~

- Added support for ``PageTemplate`` and
  ``ZopePageTemplate``.
  [malthe]

1.2 - 2010-08-30
~~~~~~~~~~~~~~~~

- Fixed acquisition-wrapping issue: we need to wrap with the parent to
  avoid a pair of template objects (original and patched).

1.1 - 2010-05-15
~~~~~~~~~~~~~~~~~
